add more info about papers, redesign
